# seizu

./: pyproject.toml
app/: __init__.py
app/core/: config.py  models.py  stores.py
app/routes/: __init__.py  transactions.py
app/tests/: test_stores.py
